2007-05-28  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Compilation fixes.
	* NEWS: Add a slot for changes in 2.0.
	* src/ast/all.hh: Remove a useless include of a non-existent file.
	* src/parser/bison/ugrammar.y: Initialize a pointer that may be
	returned uninitialized otherwise.

2007-05-25  Akim Demaille  <demaille@gostai.com>

	Some more arithmetics
	* src/parser/bison/ugrammar.y: Handle unary - and ().

2007-05-25  Akim Demaille  <demaille@gostai.com>

	Cleanup string scanning
	* src/parser/bison/utoken.l: Let the scanner use only std::string.
	(SET_VALP_STR): Remove, inlined in the single remaining use.
	Use std::string, not UString.
	Add underscores to a few places that need them.
	Adjust to the following token name changes.
	* src/parser/bison/ugrammar.y: Put private functions in the
	anonymous namespace.
	(take): Welcome back.
	(TOK_FALSECONST, TOK_TRUECONST): Rename as...
	(TOK_FALSE, TOK_TRUE): ... these.
	(ustring): New.
	(STRING, IDENTIFIER): Now string.
	* src/ast/ast.yml: Layout changes.

2007-05-25  Akim Demaille  <demaille@gostai.com>

	Remove STRUCT hacks
	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y
	(STRUCT, TAG, %union structure, array): Remove.
	(purevariable): Handle "." and "[...]".

2007-05-25  Akim Demaille  <demaille@gostai.com>

	Use libport::Symbol for locations
	* src/parser/bison/ugrammar.y: Use Symbol for file names.
	* src/ast/loc.hh: Include libport/symbol.hh.
	* src/parser/uparser.hh, src/parser/uparser.cc: Remove the
	handling of the allocated file names, now handled by Symbol
	(not quite true).

2007-05-25  Akim Demaille  <demaille@gostai.com>

	Minor parser simplifications
	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y: Rename
	the tokens for the logical and and or.
	Use newer Bison features.

2007-05-25  Akim Demaille  <demaille@gostai.com>

	Clean up a bit the scanning of numbers
	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y:
	Now scan integers and floats differently.